--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,8 @@
     "react-native-web-maps": "^0.2.0",
     "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
